# summer-session

./: ARCHITECTURE.md  CODE_STANDARDS.md  PROJECT_STRUCTURE.md  README.md
api_gateway/: pyproject.toml
api_gateway/src/: main.py
api_gateway/src/clients/: influx_client.py
api_gateway/src/models/: schemas.py
api_gateway/src/routers/: alerts.py  bigscreen.py  mews.py  vitals.py  wards.py
data_collector/: pyproject.toml
data_collector/src/: main.py
data_collector/src/data_collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data_collector/src/kafka/: dlq.py  producer.py  router.py
data_collector/src/models/: enums.py  patient_vital_record.py
data_collector/src/observability/: logger.py  metrics.py
data_collector/src/pipeline/: enricher.py  frame_decoder.py  normalizer.py  parser.py  pipeline.py  validator.py
data_collector/src/server/: conn_manager.py  tcp_server.py
data_collector/src/state/: device_tracker.py  health_checker.py  patient_binder.py
device_simulator/: CMakeLists.txt
device_simulator/config/: devices.json
device_simulator/src/: main.cpp
device_simulator/src/anomaly/: AnomalyInjector.cpp  AnomalyInjector.h
device_simulator/src/core/: Config.cpp  Config.h  DeviceConnection.cpp  DeviceConnection.h  DeviceModel.cpp  DeviceModel.h  Simulator.cpp  Simulator.h
device_simulator/src/devices/: MonitorModel.cpp  MonitorModel.h  TempSensorModel.cpp  TempSensorModel.h
device_simulator/src/protocol/: FrameProtocol.cpp  FrameProtocol.h
docker/: api-gateway.Dockerfile  collector.Dockerfile  docker-compose.yml  flink-fix.Dockerfile  flink-submit.sh  flink.Dockerfile  hbase.Dockerfile  jobmanager.Dockerfile  simulator.Dockerfile
docs/: hbase-design.md  layer4-interface-contract.md
flink_computation/: pom.xml
flink_computation/src/main/java/com/monitor/function/: AlertDeduplicator.java  BaselineStats.java  DeviceFusionFunction.java  MewsCalculator.java  RiskClassifier.java  TrendAnalyzer.java  TrendResult.java  VitalSignDeserializer.java
flink_computation/src/main/java/com/monitor/job/: VitalSignProcessingJob.java
flink_computation/src/main/java/com/monitor/model/: AlertEvent.java  DiagnosticInput.java  MewsScore.java  PatientSnapshot.java  PatientVitalRecord.java
flink_computation/src/main/java/com/monitor/sink/: AlertEventKafkaSink.java  DiagnosticInputKafkaSink.java  HBaseSink.java  InfluxDbSink.java
scripts/: bigscreen_demo.html  bridge.py  bridge_simple.py  kafka_bridge.py  read_hbase.bat  read_hbase.py  run.ps1  run_50_patients.py  run_8_patients.py  start-all.sh  start.bat  stop.bat  submit-flink.ps1  test_dashboard.html  test_device.py
