[project]
name = "data-collector"
version = "1.0.0"
description = "L2: 医院生命体征数据采集与标准化层"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10.0",
    "orjson>=3.9.0",
    "prometheus-client>=0.19.0",
    "redis>=5.0.0",
    "jsonschema>=4.20.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # 与 D211 冲突
    "D213",    # 与 D212 冲突
    "EM101",   # 允许 str.format 在异常中
    "S104",    # 允许绑定到所有接口
]

[tool.pyright]
typeCheckingMode = "strict"
